# CAUSecurityDesign242

./: .gitignore  CMakeLists.txt  Client.cpp  Client.h  DatabaseManager.h  FinancialAnalyzer.cpp  FinancialAnalyzer.h  README.md  SecurityProj.sln  Server.cpp  Server.h  main.cpp
SecurityProj/: SecurityProj.vcxproj  SecurityProj.vcxproj.filters  pch.h
cmake/Modules/: FindMySQL.cmake  FindMySQLConnectorCpp.cmake
fhetest/: practice.cpp  practice.h  tutorial.cpp  tutorial2.cpp  tutorial3.cpp
sources/: Client.cpp  Client.h  DBManager.cpp  DBManager.h  DatabaseManager.cpp  DepartmentHandler.cpp  DepartmentHandler.h  FinancialAnalyzer.cpp  FinancialAnalyzer.h  InvesetorHandler.cpp  InvestorHandler.h  Server.cpp  Server.h
